syntax = "proto3";

option go_package = "github.com/iskandersierra/job-state/pb";

service JobStateService {
    rpc CreateJobState(CreateJobStateRequest) returns (CreateJobStateResponse) {}
}

message JobStateModel {
    string id = 1;
    string title = 2;
    string created_at = 3;
}

message CreateJobStateRequest {
    string title = 1;
}

message CreateJobStateResponse {
    JobStateModel job_state = 1;
}
